--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,8 @@ a{
 }
 
 body{
+    margin: 0;
+    padding: 0;
     background-color: #f4d5a3;
     background: linear-gradient( #FACB80, #F69770);
     color: rgba(255, 71, 99,1);
