--- a/src/form.css
+++ b/src/form.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro&family=Fredoka&family=Poppins:wght@200&family=Ropa+Sans&display=swap');
 
+body{
+    color: black;
+}
 .formConatiner{
     box-shadow:  17px 10px 9px 15px rgb(176,198,212);
     border-top-left-radius: 25px;
@@ -14,7 +17,7 @@
     padding: 10px;
 }
 
-::placeholder{
+::placeholder, option, select{
     color: rgb(176,198,212);
     font-family: 'Ropa Sans', sans-serif;
   
@@ -24,7 +27,7 @@
     text-align: left;
 }
 
-input{
+input, select{
 height: 2rem;
 padding: 0.5rem;
 border-radius: 10px;
