--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,49 @@
-@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro&family=Fredoka&family=Poppins:wght@200&display=swap');
-
-h4{
+/* @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro&family=Fredoka&family=Poppins:wght@200&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Honk:MORF@15&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Lexend:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&family=Space+Grotesk:wght@300..700&display=swap');
+h4 {
     font-size: 1 rem;
     color: rgb(50, 50, 50);
 }
 
 
-h3{
+h3 {
     font-size: 1.5 rem;
     color: rgb(50, 50, 50);
     line-height: 2.5 rem;
     margin: 2rem 0rem;
 }
 
-a{
+a {
     color: rgb(50, 50, 50);
 }
 
-body{
+body {
     margin: 0;
     padding: 0;
-    background-color: #f4d5a3;
-    background: linear-gradient( #FACB80, #F69770);
-    color: rgba(255, 71, 99,1);
-    font-family: Fredoka ;
+    color: rgba(255, 71, 99, 1);
+    background-color: #fff;
+    /* background-image: linear-gradient(#FFF,
+            #FACB80); */
+    /* background-color: #f9f9f9; */
+    font-family: Fredoka;
+}
+
+.line {
+  opacity: 0;
+}
+
+.line-1 {
+  font-size: 3rem;
+  font-weight: 700;
+}
+
+.line-2 {
+  font-size: 1.8rem;
+  font-weight: 500;
+  color: #aaa;
+}
+
+.line-3 {
+  font-size: 1.2rem;
+  letter-spacing: 0.08em;
 }
