--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ a {
 body {
     margin: 0;
     padding: 0;
-    color: rgba(255, 71, 99, 1);
+    /* color: rgba(255, 71, 99, 1); */
     background-color: #fff;
     /* background-image: linear-gradient(#FFF,
             #FACB80); */
